examples/k8s/oauth2/envoyconfig.yaml
apiVersion: marin3r.3scale.net/v1alpha1
kind: EnvoyConfig
metadata:
  name: oauth-proxy
spec:
  nodeID: oauth-proxy
  resources:
    - type: listener
      value:
        name: https
        address:
          socket_address:
            address: 0.0.0.0
            port_value: 8443
        filter_chains:
          - filters:
              - name: envoy.filters.network.http_connection_manager
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                  stat_prefix: ingress_http
                  rds:
                    route_config_name: "kuard"
                    config_source:
                      ads: {}
                      resource_api_version: "V3"
                  http_filters:
                    - name: envoy.filters.http.oauth2
                      typed_config:
                        "@type": type.googleapis.com/envoy.extensions.filters.http.oauth2.v3.OAuth2
                        config:
                          token_endpoint:
                            uri: https://github.com/login/oauth/access_token
                            cluster: oauth
                            timeout: 10s
                          authorization_endpoint: https://github.com/login/oauth/authorize
                          redirect_uri: <redirect_uri>
                          default_expires_in: 3600s
                          redirect_path_matcher:
                            path:
                              exact: /callback
                          signout_path:
                            path:
                              exact: /signout
                          credentials:
                            client_id: <client_id>
                            token_secret:
                              name: oauth_client_secret
                              sds_config:
                                ads: {}
                                resource_api_version: "V3"
                            hmac_secret:
                              name: oauth_hmac
                              sds_config:
                                ads: {}
                                resource_api_version: "V3"
                    - name: envoy.filters.http.router
                      typed_config:
                        "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
            transport_socket:
              name: envoy.transport_sockets.tls
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
                common_tls_context:
                  tls_certificate_sds_secret_configs:
                    - name: kuard
                      sds_config:
                        ads: {}
                        resource_api_version: "V3"
    - type: secret
      generateFromTlsSecret: kuard
    - type: secret
      generateFromOpaqueSecret:
        name: oauth-secrets
        key: client_secret
        alias: oauth_client_secret
    - type: secret
      generateFromOpaqueSecret:
        name: oauth-secrets
        key: hmac
        alias: oauth_hmac
    - type: route
      value:
        name: kuard
        virtual_hosts:
          - name: all
            domains: ["*"]
            routes:
              - match:
                  prefix: "/"
                route:
                  cluster: "kuard"
    - type: cluster
      value:
        name: oauth
        connect_timeout: 5s
        type: LOGICAL_DNS
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: oauth
          endpoints:
            - lb_endpoints:
                - endpoint:
                    address:
                      socket_address:
                        address: github.com
                        port_value: 443
        transport_socket:
          name: envoy.transport_sockets.tls
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
            sni: github.com
    - type: cluster
      value:
        name: kuard
        connect_timeout: 0.010s
        type: EDS
        lb_policy: ROUND_ROBIN
        eds_cluster_config:
          eds_config:
            ads: {}
            resource_api_version: "V3"
    - type: endpoint
      generateFromEndpointSlices:
        selector:
          matchLabels:
            kubernetes.io/service-name: kuard
        clusterName: kuard
        targetPort: http
